# EchoBooksTui

./: .gitignore  README.md  flake.nix  pyproject.toml
echobooks/: __init__.py  __main__.py  app.py  config.py  keyring_store.py  util.py
echobooks/db/: __init__.py  models.py  repository.py  schema.py  session.py
echobooks/providers/: __init__.py  audible.py  audnexus.py  base.py  openlibrary.py  registry.py
echobooks/screens/: __init__.py  add_book.py  book_detail.py  book_form.py  confirm.py  duplicate_prompt.py  fields.py  import_picker.py  library.py  login.py  resolve_duplicates.py  series_select.py  session_edit.py  settings.py  stats.py
echobooks/server/: __init__.py  app.py  auth.py  cli.py  config.py  db.py  models.py  sync.py
echobooks/sync/: __init__.py  client.py  engine.py  serialize.py
nix/: module.nix
tests/: conftest.py  server_helpers.py  test_app.py  test_dedup.py  test_keyring_store.py  test_login_flow.py  test_migrations.py  test_no_server_import.py  test_providers.py  test_repository.py  test_server_auth.py  test_server_sync.py  test_sync_engine.py  test_util.py
