[project]
name = "echobooks"
version = "0.1.0"
description = "A Textual TUI catalog for the books you've read, are reading, or will read — print, ebook, and audiobook."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.86",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "platformdirs>=4.2",
]

[project.scripts]
echobooks = "echobooks.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "textual-dev>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["echobooks"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
