[project]
name = "echobooks"
version = "0.1.0"
description = "A Textual TUI catalog for the books you've read, are reading, or will read — print, ebook, and audiobook."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.86",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
# The self-hosted sync server. The offline TUI never needs these — install with
# `pip install echobooks[server]` only if you run your own EchoBooks server.
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "asyncpg>=0.29",          # async Postgres driver
    "psycopg[binary]>=3.1",   # sync driver for SQLAlchemy create_all / Alembic
    "authlib>=1.3",           # Google OAuth / OIDC token verification
    "pyjwt>=2.8",             # issue / verify our own JWTs
    "argon2-cffi>=23.1",      # reserved for future password accounts (roadmap)
]

[project.scripts]
echobooks = "echobooks.__main__:main"
echobooks-server = "echobooks.server.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "textual-dev>=1.5",
    # Server deps in dev too, so the full test suite runs locally via `uv sync`.
    "echobooks[server]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["echobooks"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's dependency-injection idiom puts Depends()/Query() calls in argument
# defaults; B008 flags that but it's the framework's intended usage.
"echobooks/server/**" = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
